Add account pending message to Account Status page
- Adds account pending info to Account settings page (Account Status section) if user is not approved yet
- Fixes #20025

--- a/app/views/auth/registrations/_status.html.haml
+++ b/app/views/auth/registrations/_status.html.haml
@@ -21,6 +21,9 @@
     %span.warning-hint= t('user_mailer.warning.explanation.silence')
   - else
     %span.positive-hint= t('auth.status.functional')
+%p.hint
+  - if !@user.approved?
+    %span.warning-hint= t('auth.status.pending')
 
 = render partial: 'account_warning', collection: @strikes
 
